<resources>
    <string name="app_name">Application Extra Pr_7</string>
    <string name="mp3_player">MP3 Player</string>
    <string name="dosti_music_video">Dosti Music Video</string>
    <string name="album_art_description">Album Art</string>
    <string name="shuffle">Shuffle</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play or Pause</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
</resources>